@@ -1,0 +1,3 @@
+## -*- mode: makefile; -*-
+
+CXX_STD = CXX17
