@@ -15,9 +15,9 @@ inline long intrand() {
 //' Sortable Identifier](https://github.com/ulid/spec). Several aliases are
 //' available for convience and backwards-compatibility.
 //'
-//' Note that the current implementations has a limitation that results in
-//' second rather than millisecond resolution. See for example issue #13 at
-//' the upstream repo.
+//' Note that up until release 0.3.1, the implementations had limitations
+//' that resulted in second rather than millisecond resolution. This has
+//' been addressed for release 0.4.0 and is now supported as expected.
 //'
 //' @md
 //' @param n number of id's to generate (default = `1`)
